# ripley

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile.test  Makefile  PRODUCTION_AUDIT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REST_API_SUMMARY.md  Ripley2.0.md  Ripley3.0.md  TESTING.md  TMDB_SETUP.md  UI.md  build.rs  setup.sh  test_metadata.rs
.github/workflows/: ci.yml
agent/: Cargo.toml  build-windows.ps1
agent/src/: agent.rs  config.rs  job_worker.rs  main.rs  topaz.rs  tui.rs
scripts/: dev.sh  get_musicbrainz_discid.py  setup.sh  test-linux.sh
src/: api.rs  app.rs  audio.rs  checksum.rs  cli.rs  config.rs  database.rs  drive.rs  dvd_metadata.rs  dvd_ripper.rs  filebot.rs  lib.rs  main.rs  metadata.rs  notifications.rs  ocr.rs  rename.rs  ripper.rs  rsync.rs  speech_match.rs  tui.rs  web_ui.rs
tests/: api_test.rs  integration_test.rs
web-ui/: index.html  package-lock.json  package.json  vitest.config.js
web-ui/src/: App.jsx  api.js  api.test.js  index.css  websocket.js
web-ui/src/components/: Breadcrumbs.jsx  CollapsibleSection.jsx  ConfirmModal.jsx  Dropdown.jsx  ErrorBoundary.jsx  ErrorBoundary.test.jsx  GlobalSearch.jsx  TestCommandModal.jsx  Tooltip.jsx
web-ui/src/pages/: Agents.jsx  Configuration.jsx  Dashboard.jsx  Drives.jsx  Issues.jsx  Logs.jsx  Monitor.jsx  Preferences.jsx  Shows.jsx
web-ui/src/test/: setup.js
web-ui/src/utils/: errorHelper.js  errorHelper.test.js  notifications.js  sound.js
