[package]
name = "ripley"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for MusicBrainz
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio playback
rodio = "0.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Disc ID calculation
sha1 = "0.10"
base64 = "0.22"

# Utilities
chrono = "0.4"
regex = "1.10"
