[package]
name = "ripley"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "color"] }
anstyle = "1.0"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# REST API
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
include_dir = "0.7"
mime_guess = "2.0"

# HTTP client for MusicBrainz
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database for logs and issues
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# Audio playback
rodio = "0.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Directory helpers
dirs = "5.0"
tracing-subscriber = "0.3"

# Disc ID calculation
sha1 = "0.10"
base64 = "0.22"

# File checksums
sha2 = "0.10"
hex = "0.4"

# Utilities
regex = "1.10"
urlencoding = "2.1"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
